# wcosa

./: .gitignore  .gitmodules  .goreleaser.yaml  .goreleaser.yml  .travis.yml  .wwhrd.yml  CONTRIBUTING.md  Gopkg.toml  Makefile  README.md  Taskfile.yml  go.mod  go.sum  magefile.go  package.json  run-tests.sh  wmake  wmake.bat
assets/cli-helper/: app-help.txt
assets/configurations/: structure-avr.json
assets/templates/cmake/: CMakeListsAVR.txt.tpl  CMakeListsNative.txt.tpl
assets/templates/readme/: APP_README.md  PKG_README.md
cmd/: main.cpp.go
cmd/wio/: wio.go
cmd/wio/commands/: commands.go  util.go
cmd/wio/commands/clean/: clean.go
cmd/wio/commands/create/: checks.go  create-types.go  create.go  helper.go  targets-update.go  types.go  update.go
cmd/wio/commands/devices/: monitor.go
cmd/wio/commands/monitor/: editbox.go  monitor.go  screenBox.go  test.go
cmd/wio/commands/pac/: checks.go  pac.go  packagejson.go  vendor.go
cmd/wio/commands/pac/install/: install.go  util.go
cmd/wio/commands/pac/user/: login.go
cmd/wio/commands/run/: avr.go  checks.go  cmake-dependencies.go  cmake.go  cmd.go  dependencies.go  dispatch.go  flags.go  ports.go  run.go  util.go
cmd/wio/config/: defaults.go  meta.go
cmd/wio/constants/: project-type.go
cmd/wio/dependencies/: cmake-dependencies-creator.go  cmake-printer.go  cmake-text-generator.go  dependency-parser.go  flags.go
cmd/wio/errors/: errors.go
cmd/wio/log/: logger.go  queue.go
cmd/wio/parsers/cmake/: libs.go
cmd/wio/toolchain/: ports.go  toolchain.go
cmd/wio/toolchain/npm/: client.go  client_test.go  dep.go  deputils.go  install.go  npm-types.go  types.go  version.go  version_test.go
cmd/wio/types/: general-types.go  impl.go  interface.go
cmd/wio/utils/: config-print.go  config.go  file.go  utils.go
cmd/wio/utils/io/: bindata.go  ioutils.go  types.go
cmd/wio/utils/template/: template.go
deploy/: changelog-template.hbs  config.yml
internal/cmd/create/: ide.go  update.go
internal/cmd/devices/: monitor.go
internal/cmd/env/: env.go
internal/cmd/generate/: generate.go
internal/cmd/run/: cmd.go  dispatch.go  run.go
internal/cmd/run/cmake/: cmake.go
internal/cmd/run/dependencies/: dep.go  target-resolve.go
internal/cmd/upgrade/: upgrade.go
internal/config/: handler.go  helpers.go  hookFuncs.go  interface.go  project.go  wio-usr.go
internal/config/meta/: meta.go
internal/config/root/: paths.go  wio-root.go
internal/config/testing/: handler_test.go  test_configs.go
internal/constants/: constants.go
internal/evaluators/hillang/: configs.go  configs_test.go  functions.go  functions_test.go
internal/evaluators/tengolang/: functions.go
internal/executor/: startup.go
internal/hillang/: configs.go  functions.go
internal/types/: impl.go  interface.go  util.go
npm-go/: postpack.js  preinstall.js
pkg/downloader/: downloader.go  git.go  npm.go  types.go
pkg/log/: args.go
pkg/npm/client/: client.go
pkg/npm/resolve/: resolve.go  types.go
pkg/npm/semver/: query.go  version.go
pkg/sys/: filesystem.go  filesystem_test.go  mocking.go
pkg/toolchain/: frameworks.go  types.go  util.go  wio-update.go
pkg/toolchain/frameworks/: frameworks.go
pkg/util/: cmd.go
pkg/util/sys/: bindata.go
sample-cmake-build/: CMakeLists.txt
sample-cmake-build/cmake/: generic-gcc-avr.cmake
sample-cmake-build/lib/: CMakeLists.txt
sample-cmake-build/lib/library1/: file.h
sample-cmake-build/lib/library2/: file2.cpp  file2.h
sample-cmake-build/src/: CMakeLists.txt  main.cpp
scripts/: create.py  handle.py  serial.py  use.py
scripts/cmake-files/: CMakeLists.txt  generic-gcc-avr.cmake
scripts/config-files/: internal-config.json
scripts/module/: Parser.py  helper.py  output.py  parent.py
scripts/required-files/: CMakeLists-lib.txt  CMakeLists-main.txt  CMakeLists-src.txt  config.json
templates/: wioConfig.qtpl
test/: runtests.sh
test/project-app/app-linker/: wio.yml
test/project-app/app-pthreads/: wio.yml
test/project-pkg/pkg-libraries-complex/: wio.yml
tests/: runtests.sh  symlinks.sh
tests/build-test/app-test/: wio.yml
tests/build-test/pkg-test/: wio.yml
tests/project-app/app-alloc/: wio.yml
tests/project-app/app-avr/: wio.yml
tests/project-app/app-avr-vendor/: README.md  wio.yml
tests/project-app/app-avr-vendor/src/: main.cpp
tests/project-app/app-pipe/: wio.yml
tests/project-app/app-pipe/src/: main.c
tests/project-app/app-stdout/: wio.yml
tests/project-app/app-stdout/src/: main.cpp
tests/project-pkg/pkg-list/: wio.yml
tests/project-pkg/pkg-list/include/: list.h  pkg-list.h
tests/project-pkg/pkg-list/src/: impl.cpp
tests/project-pkg/pkg-list/tests/: main.cpp
tests/project-pkg/pkg-malloc/: wio.yml
tests/project-pkg/pkg-malloc/src/: impl.c
tests/project-pkg/pkg-trace/: wio.yml
tests/project-pkg/pkg-uart/: wio.yml
tests/project-pkg/pkg-uart/include/: uart.h
tests/project-pkg/pkg-uart/src/: impl.cpp
(+28 files in other folders)
