#####################################################################
# simple AVR executable
#####################################################################
file(GLOB_RECURSE SRC_FILES "*.cpp" "*.cc")

add_avr_executable(
   src
   ${SRC_FILES}
   )

#####################################################################
# libraries to link to
#####################################################################
target_link_libraries(
   src-${AVR_MCU}.elf
   lib-${AVR_MCU}
   )
